<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/user"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo de pesquisa -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:background="@drawable/bordapesquisa"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:queryHint="Qual a música do momento?"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navegacao">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="4"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/tittle1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <GridLayout
                android:id="@+id/artist_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:columnCount="3">
                <LinearLayout
                    android:id="@+id/art1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/circulo"
                        android:src="@drawable/art1"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        tools:ignore="ContentDescription,UnusedAttribute" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/art1"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/art2"
                        android:background="@drawable/circulo"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/art2"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/art3"
                        android:background="@drawable/circulo"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/art3"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/art4"
                        android:background="@drawable/circulo"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/art4"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/art5"
                        android:background="@drawable/circulo"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/art5"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/art6"
                        android:background="@drawable/circulo"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/art6"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </GridLayout>

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/tittle2"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!-- Seção de generos -->
            <GridLayout
                android:id="@+id/genero_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:columnCount="2">

                <LinearLayout
                    android:id="@+id/genero1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hiphop"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/generobox"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/gen1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/generobox"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/gen2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/generobox"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/gen3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/generobox"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/gen4"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/generobox"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/gen5"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/generobox"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/gen6"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

            </GridLayout>

        </GridLayout>

    </ScrollView>

    <!-- Navegação inferior -->
    <LinearLayout
        android:id="@+id/navegacao"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <GridLayout
            android:id="@+id/barranav"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:src="@drawable/home"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="110dp"
                android:src="@drawable/search"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="90dp"
                android:src="@drawable/library"
                android:layout_gravity="center" />
        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
