<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaGeneroActivity">

  <ImageView
      android:id="@+id/setaVoltar"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:src="@drawable/seta"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      tools:ignore="ContentDescription"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/hiphop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/font"
      android:text="@string/gen1"
      android:textColor="@color/white"
      android:textSize="45sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.26"
      app:layout_constraintStart_toEndOf="@id/setaVoltar"
      app:layout_constraintTop_toTopOf="parent" />

  <!-- GRID PRINCIPAL -->
  <GridLayout
      android:id="@+id/grid_genero"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:columnCount="1"
      android:rowCount="6"
      android:layout_marginStart="30dp"
      android:layout_marginTop="50dp"
      app:layout_constraintTop_toBottomOf="@id/hiphop"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font"
        android:text="@string/tittle3"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- SCROLL HORIZONTAL ALBUNS-->
    <HorizontalScrollView
        android:id="@+id/scrollalbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/alb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb1"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb2"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb3"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb4"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

      </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font"
        android:text="@string/tittle4"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/scrollalbum" />

    <HorizontalScrollView
        android:id="@+id/scrollalbum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/alb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb1"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb2"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb3"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb4"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

      </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tittle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font"
        android:text="@string/tittle5"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/scrollalbum" />

    <HorizontalScrollView
        android:id="@+id/scrollalbum3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/alb9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb1"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb2"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb3"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alb12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
          <TextView
              android:layout_width="121dp"
              android:layout_height="115dp"
              android:layout_margin="2dp"
              android:background="@drawable/albumbox"
              android:text="@string/alb4"
              android:gravity="center"
              android:fontFamily="@font/font"
              android:textStyle="bold"
              android:textSize="15sp"
              android:textColor="@color/black"
              tools:ignore="ContentDescription" />
        </LinearLayout>

      </LinearLayout>
    </HorizontalScrollView>

  </GridLayout>

  <!-- Navegação inferior -->
  <LinearLayout
      android:id="@+id/navegacao"
      android:layout_width="match_parent"
      android:layout_height="85dp"
      android:layout_marginTop="12dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <GridLayout
        android:id="@+id/barranav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="1">

      <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginStart="40dp"
          android:src="@drawable/home"
          android:layout_gravity="center" />

      <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginStart="110dp"
          android:src="@drawable/search"
          android:layout_gravity="center" />

      <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginStart="90dp"
          android:src="@drawable/library"
          android:layout_gravity="center" />
    </GridLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
